simplify assertions